--- a/Assignment/03_answers_generation.ipynb
+++ b/Assignment/03_answers_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,6 @@
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
     "\n",
-    "import pandas as pd\n",
     "from PIL import Image\n",
     "from openai import OpenAI\n",
     "import anthropic\n",
@@ -152,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +170,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  9%|▉         | 9/100 [06:39<1:10:02, 46.18s/it]"
+      "  0%|          | 0/100 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -214,7 +213,7 @@
     "            img_descr, \n",
     "            base64_image,\n",
     "        )\n",
-    "        results[\"gpt_text\"].append(response_gpt_image)\n",
+    "        results[\"gpt_image\"].append(response_gpt_image)\n",
     "\n",
     "        response_qwen_text = answer_openai(\n",
     "            alibaba_client,\n",
@@ -252,7 +251,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"./data/qna_results.json\", \"w\") as f:\n",
+    "    json.dump(results, f)"
+   ]
   },
   {
    "cell_type": "code",
