--- a/Assignment/03_answers_generation.ipynb
+++ b/Assignment/03_answers_generation.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import libs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -19,6 +26,30 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import base64\n",
+    "from pathlib import Path\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from PIL import Image\n",
+    "from openai import OpenAI\n",
+    "import anthropic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Call Models to Generate Answers"
    ]
   },
   {
@@ -43,16 +74,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import json\n",
-    "import base64\n",
-    "from pathlib import Path\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "from PIL import Image\n",
-    "from openai import OpenAI\n",
-    "import anthropic\n",
-    "\n",
     "\n",
     "openai_client = OpenAI(api_key=os.environ.get(\"OPENAI_API_KEY\"))\n",
     "alibaba_client = OpenAI(\n",
@@ -255,20 +276,6 @@
     "with open(\"./data/qna_results.json\", \"w\") as f:\n",
     "    json.dump(results, f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
